Fix alignment

--- a/style.css
+++ b/style.css
@@ -31,11 +31,15 @@ nav{
     margin-right: 20px;
 }
 
-nav ul li {
-    display: inline-block;
+nav ul {
+    display: flex;
     list-style: none;
-    margin: 50px;
+    margin: 0;
+    padding: 0;
+}
 
+nav ul li {
+    margin: 0 25px;
 }
 
 nav ul li a {
